feat: 竞赛详细信息
