# internal/docs/swagger.json
@@ -307,6 +307,30 @@
                 }
             }
         },
+        "/contest-detail": {
+            "get": {
+                "tags": [
+                    "公共方法"
+                ],
+                "summary": "竞赛详情",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "contest identity",
+                        "name": "identity",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\":\"200\",\"data\":\"\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/contest-list": {
             "get": {
                 "tags": [
